  * Make -h work for -r/-R too. (Only download articles from the given host.  If that host doesn't have the article, skip and flag it as an error)
  * Added a connection pool to avoid continuously reconnecting when articles are spread across different servers a lot. (suggested by Thore Harald Hoye)  (Adds new .ngetrc global opts idletimeout/maxconnections, and per-server idletimeout)

2002-02-28 v0.17:
  * Handle invalid References starting with a '.'.
  * Fix --without-zlib build.
  * Optimized cache file loading and dupe file checking speed.
  * Added cachedir config option and NGETCACHE env var.
  * Added --test-multiserver (and test_multiserver .ngetrc option) to make -T show which servers have each file.
  * Don't show doarticle linecount warning for servers that report # of bytes counted with LF endings, then send with CRLF.
  * Some portability fixes. (Now builds on SunOS.)
  * Handle server_articles left in the cache that have no server with a matching serverid in .ngetrc.
  * .ngetrc now has global fullxover and maxstreaming options to set the default for all host entries that don't specify their own.
  * Update .ngetrc handling to allow # to be used for comment lines (in addition to //), and to not require the // to be on the first column.
  * Make -i mode continue downloading parts even if the server reports one of them is no longer available. (reported by Thore Harald Hoye)
  * Add FAQ about yEnc support.
  * Started adding a test suite.

2002-01-23 v0.16:
  * Print info line about each file before beginning retrieval.
  * Fix slow exit with very large midinfo files.
  * In -T mode, only print x/y parts if the post is incomplete, otherwise just print x.
  * Set default --limit to 0.
  * Remove old -L/-S args since noone probably used them anyway (can still be set in .ngetrc).
  * Added -L/--maxlines to complement -l/--limit.
  * Now saves References in cache file.
  * Cache file format change, so switch default NGETHOME to ~/.nget4.